bluec-tests/tests/invalid/expr_sizeof/sizeof_void_array4.c
int main(void) {
    return sizeof(void[3][2][1]);
}